--- a/src/asset/styles/components.scss
+++ b/src/asset/styles/components.scss
@@ -3,7 +3,7 @@ li,ul,p,div,html,body{margin:0; padding:0;list-style:none;}
     height:44px; width:100%; overflow:hidden; background-color:#f5f5f5; font-size:16px;display:flex;text-align:center; justify-content:center;align-items:center;
     .leftBtn,
     .rightBtn,
-    &>a{display:block;position:absolute; top:0; width:44px; height:44px; overflow:hidden; text-align:center; font-size:14px; line-height:44px;color:#666;}
+    &>a{display:block;position:absolute; top:0; width:44px; height:44px; overflow:hidden; text-align:center; font-size:22px; line-height:44px;color:#666;}
     .leftBtn{left:0;}
     .rightBtn{right:0;}
 }
@@ -14,16 +14,14 @@ li,ul,p,div,html,body{margin:0; padding:0;list-style:none;}
 
 
 .container{
-    flex:1 0 auto; 
+    flex:1 0 auto; background-color:#fffdfb;
 }
-
-
 .footer{
     width:100%; position:fixed;left:0;bottom:0; height:56px; overflow:hidden; background-color:#f5f5f5;
     display:flex;justify-content:center; align-items:center;
     & > a{
         display:block; flex:1 0 auto;text-align:center;
-        & > i { width:26px; height:26px; margin:0 auto; background-color:#ccc; display:block; } 
+        & > i { width:26px; height:26px; margin:0 auto; font-size:20px;display:block; color: #333; } 
         & > span{ display:block; line-height:22px; font-size:14px; color:#333; }
     }
 }
