--- a/src/asset/styles/components.scss
+++ b/src/asset/styles/components.scss
@@ -16,6 +16,12 @@ li,ul,p,div,html,body{margin:0; padding:0;list-style:none;}
 .container{
     flex:1 0 auto; background-color:#fffdfb;
 }
+
+.list-container{
+    padding:0 5vw; box-sizing:border-box;
+}
+
+
 .footer{
     width:100%; position:fixed;left:0;bottom:0; height:56px; overflow:hidden; background-color:#f5f5f5;
     display:flex;justify-content:center; align-items:center;
