--- a/src/asset/styles/components.scss
+++ b/src/asset/styles/components.scss
@@ -26,8 +26,19 @@ li,ul,p,div,html,body{margin:0; padding:0;list-style:none;}
     width:100%; position:fixed;left:0;bottom:0; height:56px; overflow:hidden; background-color:#f5f5f5;
     display:flex;justify-content:center; align-items:center;
     & > a{
-        display:block; flex:1 0 auto;text-align:center;
-        & > i { width:26px; height:26px; margin:0 auto; font-size:20px;display:block; color: #333; } 
-        & > span{ display:block; line-height:22px; font-size:14px; color:#333; }
+        display:block; flex:1 0 auto;text-align:center;        
+        & > p > i { width:26px; height:26px; margin:0 auto; font-size:20px;display:block; color: #333; } 
+        & > p > span{ display:block; line-height:22px; font-size:14px; color:#333; }
+    }
+}
+
+.tabs {
+    width:100%; 
+    .content {
+        width:100%;
+        & > section{ display:none;}
+        section.active{
+            display:block;
+        }
     }
 }
